test/e2e/testdata/shared-app-net/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-shared-app-net
---
# Gateway B1 on VLAN 300 with shared app-net-b
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-b1
  namespace: e2e-shared-app-net
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-b1
  listeners:
  - name: default
    protocol: TCP
    port: 80
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-b1
  namespace: e2e-shared-app-net
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: vlan-300
      namespace: e2e-shared-app-net
      interface: vlan-300
  - type: NAD
    nad:
      name: app-net-b
      namespace: e2e-shared-app-net
      interface: net-b
  networkSubnets:
  - attachmentType: NAD
    cidrs:
    - "169.111.100.0/24"
  horizontalScaling:
    replicas: 2
---
# Gateway B2 on VLAN 400 with shared app-net-b
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-b2
  namespace: e2e-shared-app-net
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-b2
  listeners:
  - name: default
    protocol: TCP
    port: 80
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-b2
  namespace: e2e-shared-app-net
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: vlan-400
      namespace: e2e-shared-app-net
      interface: vlan-400
  - type: NAD
    nad:
      name: app-net-b
      namespace: e2e-shared-app-net
      interface: net-b
  networkSubnets:
  - attachmentType: NAD
    cidrs:
    - "169.111.100.0/24"
  horizontalScaling:
    replicas: 2
